--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
